parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    DOUZ
    3AREF
    RED
    TELE3
    NAW3

Grammar

Rule 0     S' -> program
Rule 1     program -> instruction_list
Rule 2     incrementation -> ID INCREMENTATION
Rule 3     decrementation -> ID DECREMENTATION
Rule 4     var_assign -> ID EQUALS expression
Rule 5     var_assign -> ID EQUALS input
Rule 6     var_assign -> MOJOD var_assign
Rule 7     arrayelt_assign -> arrayelt EQUALS expression
Rule 8     if -> ILA ( condition ) { instruction_list }
Rule 9     if -> ILA ( condition ) { instruction_list } WLA { instruction_list }
Rule 10    for -> LKOLA ( var_assign ; condition ; incrementation ) { instruction_list }
Rule 11    for -> LKOLA ( var_assign ; condition ; decrementation ) { instruction_list }
Rule 12    for -> LKOLA ( expression ; condition ; incrementation ) { instruction_list }
Rule 13    for -> LKOLA ( expression ; condition ; decrementation ) { instruction_list }
Rule 14    while -> MA7ED ( condition ) { instruction_list }
Rule 15    doWhile -> DIR { instruction_list } MA7ED ( condition )
Rule 16    instruction -> var_assign
Rule 17    instruction -> arrayelt_assign
Rule 18    instruction -> printing
Rule 19    instruction -> incrementation
Rule 20    instruction -> decrementation
Rule 21    instruction -> expression
Rule 22    instruction -> try
Rule 23    instruction -> if
Rule 24    instruction -> for
Rule 25    instruction -> KHREJ
Rule 26    instruction -> KMEL
Rule 27    instruction -> while
Rule 28    instruction -> doWhile
Rule 29    instruction -> input
Rule 30    instruction -> len
Rule 31    instruction -> empty
Rule 32    instruction_list -> instruction
Rule 33    instruction_list -> instruction_list instruction
Rule 34    condition -> ( condition ) AW ( condition )
Rule 35    condition -> ( condition ) WA ( condition )
Rule 36    condition -> condition WA ( condition )
Rule 37    condition -> condition AW ( condition )
Rule 38    condition -> ( condition ) WA condition
Rule 39    condition -> ( condition ) AW condition
Rule 40    condition -> L3AKSS ( condition )
Rule 41    condition -> expression SUP expression
Rule 42    condition -> expression INF expression
Rule 43    condition -> expression EQUALSCOMP expression
Rule 44    condition -> expression SUPEQUALS expression
Rule 45    condition -> expression INFEQUALS expression
Rule 46    condition -> expression DIFFERENT expression
Rule 47    condition -> expression
Rule 48    expression -> expression PLUS expression
Rule 49    expression -> expression MINUS expression
Rule 50    expression -> expression TIMES expression
Rule 51    expression -> expression DIVIDE expression
Rule 52    expression -> ( expression )
Rule 53    expression -> MINUS expression
Rule 54    expression -> PLUS expression
Rule 55    expression -> ID
Rule 56    input -> QRA ( expression )
Rule 57    input -> QRA ( )
Rule 58    try -> JEREB { instruction_list } MASD9CH { instruction_list }
Rule 59    try -> JEREB { instruction_list } MASD9CH { instruction_list } AKHIRAN { instruction_list }
Rule 60    expression -> INT
Rule 61    expression -> FLOAT
Rule 62    expression -> STRING
Rule 63    expression -> KHATE2
Rule 64    expression -> S7I7
Rule 65    expression -> WALO
Rule 66    expression -> array
Rule 67    expression -> arrayelt
Rule 68    expression -> arrayslice
Rule 69    arraylist -> expression
Rule 70    arraylist -> arraylist , expression
Rule 71    array -> [ arraylist ]
Rule 72    array -> [ ]
Rule 73    arrayelt -> ID dimensions
Rule 74    dimensions -> [ expression ]
Rule 75    dimensions -> dimensions [ expression ]
Rule 76    arrayslice -> ID [ expression : expression ]
Rule 77    arrayslice -> ID [ : expression ]
Rule 78    arrayslice -> ID [ expression : ]
Rule 79    arrayslice -> ID [ : ]
Rule 80    printing -> KTEB ( condition )
Rule 81    printing -> KTEB ( incrementation )
Rule 82    printing -> KTEB ( decrementation )
Rule 83    len -> TOL ( expression )
Rule 84    empty -> <empty>

Terminals, with rules where they appear

(                    : 8 9 10 11 12 13 14 15 34 34 35 35 36 37 38 39 40 52 56 57 80 81 82 83
)                    : 8 9 10 11 12 13 14 15 34 34 35 35 36 37 38 39 40 52 56 57 80 81 82 83
,                    : 70
3AREF                : 
:                    : 76 77 78 79
;                    : 10 10 11 11 12 12 13 13
AKHIRAN              : 59
AW                   : 34 37 39
DECREMENTATION       : 3
DIFFERENT            : 46
DIR                  : 15
DIVIDE               : 51
DOUZ                 : 
EQUALS               : 4 5 7
EQUALSCOMP           : 43
FLOAT                : 61
ID                   : 2 3 4 5 55 73 76 77 78 79
ILA                  : 8 9
INCREMENTATION       : 2
INF                  : 42
INFEQUALS            : 45
INT                  : 60
JEREB                : 58 59
KHATE2               : 63
KHREJ                : 25
KMEL                 : 26
KTEB                 : 80 81 82
L3AKSS               : 40
LKOLA                : 10 11 12 13
MA7ED                : 14 15
MASD9CH              : 58 59
MINUS                : 49 53
MOJOD                : 6
NAW3                 : 
PLUS                 : 48 54
QRA                  : 56 57
RED                  : 
S7I7                 : 64
STRING               : 62
SUP                  : 41
SUPEQUALS            : 44
TELE3                : 
TIMES                : 50
TOL                  : 83
WA                   : 35 36 38
WALO                 : 65
WLA                  : 9
[                    : 71 72 74 75 76 77 78 79
]                    : 71 72 74 75 76 77 78 79
error                : 
{                    : 8 9 9 10 11 12 13 14 15 58 58 59 59 59
}                    : 8 9 9 10 11 12 13 14 15 58 58 59 59 59

Nonterminals, with rules where they appear

array                : 66
arrayelt             : 7 67
arrayelt_assign      : 17
arraylist            : 70 71
arrayslice           : 68
condition            : 8 9 10 11 12 13 14 15 34 34 35 35 36 36 37 37 38 38 39 39 40 80
decrementation       : 11 13 20 82
dimensions           : 73 75
doWhile              : 28
empty                : 31
expression           : 4 7 12 13 21 41 41 42 42 43 43 44 44 45 45 46 46 47 48 48 49 49 50 50 51 51 52 53 54 56 69 70 74 75 76 76 77 78 83
for                  : 24
if                   : 23
incrementation       : 10 12 19 81
input                : 5 29
instruction          : 32 33
instruction_list     : 1 8 9 9 10 11 12 13 14 15 33 58 58 59 59 59
len                  : 30
printing             : 18
program              : 0
try                  : 22
var_assign           : 6 10 11 16
while                : 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instruction_list
    (32) instruction_list -> . instruction
    (33) instruction_list -> . instruction_list instruction
    (16) instruction -> . var_assign
    (17) instruction -> . arrayelt_assign
    (18) instruction -> . printing
    (19) instruction -> . incrementation
    (20) instruction -> . decrementation
    (21) instruction -> . expression
    (22) instruction -> . try
    (23) instruction -> . if
    (24) instruction -> . for
    (25) instruction -> . KHREJ
    (26) instruction -> . KMEL
    (27) instruction -> . while
    (28) instruction -> . doWhile
    (29) instruction -> . input
    (30) instruction -> . len
    (31) instruction -> . empty
    (4) var_assign -> . ID EQUALS expression
    (5) var_assign -> . ID EQUALS input
    (6) var_assign -> . MOJOD var_assign
    (7) arrayelt_assign -> . arrayelt EQUALS expression
    (80) printing -> . KTEB ( condition )
    (81) printing -> . KTEB ( incrementation )
    (82) printing -> . KTEB ( decrementation )
    (2) incrementation -> . ID INCREMENTATION
    (3) decrementation -> . ID DECREMENTATION
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression TIMES expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . ( expression )
    (53) expression -> . MINUS expression
    (54) expression -> . PLUS expression
    (55) expression -> . ID
    (60) expression -> . INT
    (61) expression -> . FLOAT
    (62) expression -> . STRING
    (63) expression -> . KHATE2
    (64) expression -> . S7I7
    (65) expression -> . WALO
    (66) expression -> . array
    (67) expression -> . arrayelt
    (68) expression -> . arrayslice
    (58) try -> . JEREB { instruction_list } MASD9CH { instruction_list }
    (59) try -> . JEREB { instruction_list } MASD9CH { instruction_list } AKHIRAN { instruction_list }
    (8) if -> . ILA ( condition ) { instruction_list }
    (9) if -> . ILA ( condition ) { instruction_list } WLA { instruction_list }
    (10) for -> . LKOLA ( var_assign ; condition ; incrementation ) { instruction_list }
    (11) for -> . LKOLA ( var_assign ; condition ; decrementation ) { instruction_list }
    (12) for -> . LKOLA ( expression ; condition ; incrementation ) { instruction_list }
    (13) for -> . LKOLA ( expression ; condition ; decrementation ) { instruction_list }
    (14) while -> . MA7ED ( condition ) { instruction_list }
    (15) doWhile -> . DIR { instruction_list } MA7ED ( condition )
    (56) input -> . QRA ( expression )
    (57) input -> . QRA ( )
    (83) len -> . TOL ( expression )
    (84) empty -> .
    (73) arrayelt -> . ID dimensions
    (71) array -> . [ arraylist ]
    (72) array -> . [ ]
    (76) arrayslice -> . ID [ expression : expression ]
    (77) arrayslice -> . ID [ : expression ]
    (78) arrayslice -> . ID [ expression : ]
    (79) arrayslice -> . ID [ : ]

  ! shift/reduce conflict for KHREJ resolved as shift
  ! shift/reduce conflict for KMEL resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for MOJOD resolved as shift
  ! shift/reduce conflict for KTEB resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for KHATE2 resolved as shift
  ! shift/reduce conflict for S7I7 resolved as shift
  ! shift/reduce conflict for WALO resolved as shift
  ! shift/reduce conflict for JEREB resolved as shift
  ! shift/reduce conflict for ILA resolved as shift
  ! shift/reduce conflict for LKOLA resolved as shift
  ! shift/reduce conflict for MA7ED resolved as shift
  ! shift/reduce conflict for DIR resolved as shift
  ! shift/reduce conflict for QRA resolved as shift
  ! shift/reduce conflict for TOL resolved as shift
  ! shift/reduce conflict for [ resolved as shift
    KHREJ           shift and go to state 13
    KMEL            shift and go to state 14
    ID              shift and go to state 20
    MOJOD           shift and go to state 21
    KTEB            shift and go to state 23
    (               shift and go to state 24
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    STRING          shift and go to state 29
    KHATE2          shift and go to state 30
    S7I7            shift and go to state 31
    WALO            shift and go to state 32
    JEREB           shift and go to state 35
    ILA             shift and go to state 36
    LKOLA           shift and go to state 37
    MA7ED           shift and go to state 38
    DIR             shift and go to state 39
    QRA             shift and go to state 40
    TOL             shift and go to state 41
    MINUS           reduce using rule 84 (empty -> .)
    PLUS            reduce using rule 84 (empty -> .)
    $end            reduce using rule 84 (empty -> .)
    [               shift and go to state 42

  ! MINUS           [ shift and go to state 26 ]
  ! PLUS            [ shift and go to state 25 ]
  ! KHREJ           [ reduce using rule 84 (empty -> .) ]
  ! KMEL            [ reduce using rule 84 (empty -> .) ]
  ! ID              [ reduce using rule 84 (empty -> .) ]
  ! MOJOD           [ reduce using rule 84 (empty -> .) ]
  ! KTEB            [ reduce using rule 84 (empty -> .) ]
  ! (               [ reduce using rule 84 (empty -> .) ]
  ! INT             [ reduce using rule 84 (empty -> .) ]
  ! FLOAT           [ reduce using rule 84 (empty -> .) ]
  ! STRING          [ reduce using rule 84 (empty -> .) ]
  ! KHATE2          [ reduce using rule 84 (empty -> .) ]
  ! S7I7            [ reduce using rule 84 (empty -> .) ]
  ! WALO            [ reduce using rule 84 (empty -> .) ]
  ! JEREB           [ reduce using rule 84 (empty -> .) ]
  ! ILA             [ reduce using rule 84 (empty -> .) ]
  ! LKOLA           [ reduce using rule 84 (empty -> .) ]
  ! MA7ED           [ reduce using rule 84 (empty -> .) ]
  ! DIR             [ reduce using rule 84 (empty -> .) ]
  ! QRA             [ reduce using rule 84 (empty -> .) ]
  ! TOL             [ reduce using rule 84 (empty -> .) ]
  ! [               [ reduce using rule 84 (empty -> .) ]

    program                        shift and go to state 1
    instruction_list               shift and go to state 2
    instruction                    shift and go to state 3
    var_assign                     shift and go to state 4
    arrayelt_assign                shift and go to state 5
    printing                       shift and go to state 6
    incrementation                 shift and go to state 7
    decrementation                 shift and go to state 8
    expression                     shift and go to state 9
    try                            shift and go to state 10
    if                             shift and go to state 11
    for                            shift and go to state 12
    while                          shift and go to state 15
    doWhile                        shift and go to state 16
    input                          shift and go to state 17
    len                            shift and go to state 18
    empty                          shift and go to state 19
    arrayelt                       shift and go to state 22
    array                          shift and go to state 33
    arrayslice                     shift and go to state 34

state 1

    (0) S' -> program .



state 2

    (1) program -> instruction_list .
    (33) instruction_list -> instruction_list . instruction
    (16) instruction -> . var_assign
    (17) instruction -> . arrayelt_assign
    (18) instruction -> . printing
    (19) instruction -> . incrementation
    (20) instruction -> . decrementation
    (21) instruction -> . expression
    (22) instruction -> . try
    (23) instruction -> . if
    (24) instruction -> . for
    (25) instruction -> . KHREJ
    (26) instruction -> . KMEL
    (27) instruction -> . while
    (28) instruction -> . doWhile
    (29) instruction -> . input
    (30) instruction -> . len
    (31) instruction -> . empty
    (4) var_assign -> . ID EQUALS expression
    (5) var_assign -> . ID EQUALS input
    (6) var_assign -> . MOJOD var_assign
    (7) arrayelt_assign -> . arrayelt EQUALS expression
    (80) printing -> . KTEB ( condition )
    (81) printing -> . KTEB ( incrementation )
    (82) printing -> . KTEB ( decrementation )
    (2) incrementation -> . ID INCREMENTATION
    (3) decrementation -> . ID DECREMENTATION
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression TIMES expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . ( expression )
    (53) expression -> . MINUS expression
    (54) expression -> . PLUS expression
    (55) expression -> . ID
    (60) expression -> . INT
    (61) expression -> . FLOAT
    (62) expression -> . STRING
    (63) expression -> . KHATE2
    (64) expression -> . S7I7
    (65) expression -> . WALO
    (66) expression -> . array
    (67) expression -> . arrayelt
    (68) expression -> . arrayslice
    (58) try -> . JEREB { instruction_list } MASD9CH { instruction_list }
    (59) try -> . JEREB { instruction_list } MASD9CH { instruction_list } AKHIRAN { instruction_list }
    (8) if -> . ILA ( condition ) { instruction_list }
    (9) if -> . ILA ( condition ) { instruction_list } WLA { instruction_list }
    (10) for -> . LKOLA ( var_assign ; condition ; incrementation ) { instruction_list }
    (11) for -> . LKOLA ( var_assign ; condition ; decrementation ) { instruction_list }
    (12) for -> . LKOLA ( expression ; condition ; incrementation ) { instruction_list }
    (13) for -> . LKOLA ( expression ; condition ; decrementation ) { instruction_list }
    (14) while -> . MA7ED ( condition ) { instruction_list }
    (15) doWhile -> . DIR { instruction_list } MA7ED ( condition )
    (56) input -> . QRA ( expression )
    (57) input -> . QRA ( )
    (83) len -> . TOL ( expression )
    (84) empty -> .
    (73) arrayelt -> . ID dimensions
    (71) array -> . [ arraylist ]
    (72) array -> . [ ]
    (76) arrayslice -> . ID [ expression : expression ]
    (77) arrayslice -> . ID [ : expression ]
    (78) arrayslice -> . ID [ expression : ]
    (79) arrayslice -> . ID [ : ]

  ! shift/reduce conflict for KHREJ resolved as shift
  ! shift/reduce conflict for KMEL resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for MOJOD resolved as shift
  ! shift/reduce conflict for KTEB resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for KHATE2 resolved as shift
  ! shift/reduce conflict for S7I7 resolved as shift
  ! shift/reduce conflict for WALO resolved as shift
  ! shift/reduce conflict for JEREB resolved as shift
  ! shift/reduce conflict for ILA resolved as shift
  ! shift/reduce conflict for LKOLA resolved as shift
  ! shift/reduce conflict for MA7ED resolved as shift
  ! shift/reduce conflict for DIR resolved as shift
  ! shift/reduce conflict for QRA resolved as shift
  ! shift/reduce conflict for TOL resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 1 (program -> instruction_list .)
  ! shift/reduce conflict for [ resolved as shift
    $end            reduce using rule 1 (program -> instruction_list .)
    KHREJ           shift and go to state 13
    KMEL            shift and go to state 14
    ID              shift and go to state 20
    MOJOD           shift and go to state 21
    KTEB            shift and go to state 23
    (               shift and go to state 24
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    STRING          shift and go to state 29
    KHATE2          shift and go to state 30
    S7I7            shift and go to state 31
    WALO            shift and go to state 32
    JEREB           shift and go to state 35
    ILA             shift and go to state 36
    LKOLA           shift and go to state 37
    MA7ED           shift and go to state 38
    DIR             shift and go to state 39
    QRA             shift and go to state 40
    TOL             shift and go to state 41
    MINUS           reduce using rule 84 (empty -> .)
    PLUS            reduce using rule 84 (empty -> .)
    [               shift and go to state 42

  ! MINUS           [ shift and go to state 26 ]
  ! PLUS            [ shift and go to state 25 ]
  ! KHREJ           [ reduce using rule 84 (empty -> .) ]
  ! KMEL            [ reduce using rule 84 (empty -> .) ]
  ! ID              [ reduce using rule 84 (empty -> .) ]
  ! MOJOD           [ reduce using rule 84 (empty -> .) ]
  ! KTEB            [ reduce using rule 84 (empty -> .) ]
  ! (               [ reduce using rule 84 (empty -> .) ]
  ! INT             [ reduce using rule 84 (empty -> .) ]
  ! FLOAT           [ reduce using rule 84 (empty -> .) ]
  ! STRING          [ reduce using rule 84 (empty -> .) ]
  ! KHATE2          [ reduce using rule 84 (empty -> .) ]
  ! S7I7            [ reduce using rule 84 (empty -> .) ]
  ! WALO            [ reduce using rule 84 (empty -> .) ]
  ! JEREB           [ reduce using rule 84 (empty -> .) ]
  ! ILA             [ reduce using rule 84 (empty -> .) ]
  ! LKOLA           [ reduce using rule 84 (empty -> .) ]
  ! MA7ED           [ reduce using rule 84 (empty -> .) ]
  ! DIR             [ reduce using rule 84 (empty -> .) ]
  ! QRA             [ reduce using rule 84 (empty -> .) ]
  ! TOL             [ reduce using rule 84 (empty -> .) ]
  ! [               [ reduce using rule 84 (empty -> .) ]
  ! $end            [ reduce using rule 84 (empty -> .) ]

    instruction                    shift and go to state 43
    var_assign                     shift and go to state 4
    arrayelt_assign                shift and go to state 5
    printing                       shift and go to state 6
    incrementation                 shift and go to state 7
    decrementation                 shift and go to state 8
    expression                     shift and go to state 9
    try                            shift and go to state 10
    if                             shift and go to state 11
    for                            shift and go to state 12
    while                          shift and go to state 15
    doWhile                        shift and go to state 16
    input                          shift and go to state 17
    len                            shift and go to state 18
    empty                          shift and go to state 19
    arrayelt                       shift and go to state 22
    array                          shift and go to state 33
    arrayslice                     shift and go to state 34

state 3

    (32) instruction_list -> instruction .

    KHREJ           reduce using rule 32 (instruction_list -> instruction .)
    KMEL            reduce using rule 32 (instruction_list -> instruction .)
    ID              reduce using rule 32 (instruction_list -> instruction .)
    MOJOD           reduce using rule 32 (instruction_list -> instruction .)
    KTEB            reduce using rule 32 (instruction_list -> instruction .)
    (               reduce using rule 32 (instruction_list -> instruction .)
    MINUS           reduce using rule 32 (instruction_list -> instruction .)
    PLUS            reduce using rule 32 (instruction_list -> instruction .)
    INT             reduce using rule 32 (instruction_list -> instruction .)
    FLOAT           reduce using rule 32 (instruction_list -> instruction .)
    STRING          reduce using rule 32 (instruction_list -> instruction .)
    KHATE2          reduce using rule 32 (instruction_list -> instruction .)
    S7I7            reduce using rule 32 (instruction_list -> instruction .)
    WALO            reduce using rule 32 (instruction_list -> instruction .)
    JEREB           reduce using rule 32 (instruction_list -> instruction .)
    ILA             reduce using rule 32 (instruction_list -> instruction .)
    LKOLA           reduce using rule 32 (instruction_list -> instruction .)
    MA7ED           reduce using rule 32 (instruction_list -> instruction .)
    DIR             reduce using rule 32 (instruction_list -> instruction .)
    QRA             reduce using rule 32 (instruction_list -> instruction .)
    TOL             reduce using rule 32 (instruction_list -> instruction .)
    [               reduce using rule 32 (instruction_list -> instruction .)
    $end            reduce using rule 32 (instruction_list -> instruction .)
    }               reduce using rule 32 (instruction_list -> instruction .)


state 4

    (16) instruction -> var_assign .

    KHREJ           reduce using rule 16 (instruction -> var_assign .)
    KMEL            reduce using rule 16 (instruction -> var_assign .)
    ID              reduce using rule 16 (instruction -> var_assign .)
    MOJOD           reduce using rule 16 (instruction -> var_assign .)
    KTEB            reduce using rule 16 (instruction -> var_assign .)
    (               reduce using rule 16 (instruction -> var_assign .)
    MINUS           reduce using rule 16 (instruction -> var_assign .)
    PLUS            reduce using rule 16 (instruction -> var_assign .)
    INT             reduce using rule 16 (instruction -> var_assign .)
    FLOAT           reduce using rule 16 (instruction -> var_assign .)
    STRING          reduce using rule 16 (instruction -> var_assign .)
    KHATE2          reduce using rule 16 (instruction -> var_assign .)
    S7I7            reduce using rule 16 (instruction -> var_assign .)
    WALO            reduce using rule 16 (instruction -> var_assign .)
    JEREB           reduce using rule 16 (instruction -> var_assign .)
    ILA             reduce using rule 16 (instruction -> var_assign .)
    LKOLA           reduce using rule 16 (instruction -> var_assign .)
    MA7ED           reduce using rule 16 (instruction -> var_assign .)
    DIR             reduce using rule 16 (instruction -> var_assign .)
    QRA             reduce using rule 16 (instruction -> var_assign .)
    TOL             reduce using rule 16 (instruction -> var_assign .)
    [               reduce using rule 16 (instruction -> var_assign .)
    $end            reduce using rule 16 (instruction -> var_assign .)
    }               reduce using rule 16 (instruction -> var_assign .)


state 5

    (17) instruction -> arrayelt_assign .

    KHREJ           reduce using rule 17 (instruction -> arrayelt_assign .)
    KMEL            reduce using rule 17 (instruction -> arrayelt_assign .)
    ID              reduce using rule 17 (instruction -> arrayelt_assign .)
    MOJOD           reduce using rule 17 (instruction -> arrayelt_assign .)
    KTEB            reduce using rule 17 (instruction -> arrayelt_assign .)
    (               reduce using rule 17 (instruction -> arrayelt_assign .)
    MINUS           reduce using rule 17 (instruction -> arrayelt_assign .)
    PLUS            reduce using rule 17 (instruction -> arrayelt_assign .)
    INT             reduce using rule 17 (instruction -> arrayelt_assign .)
    FLOAT           reduce using rule 17 (instruction -> arrayelt_assign .)
    STRING          reduce using rule 17 (instruction -> arrayelt_assign .)
    KHATE2          reduce using rule 17 (instruction -> arrayelt_assign .)
    S7I7            reduce using rule 17 (instruction -> arrayelt_assign .)
    WALO            reduce using rule 17 (instruction -> arrayelt_assign .)
    JEREB           reduce using rule 17 (instruction -> arrayelt_assign .)
    ILA             reduce using rule 17 (instruction -> arrayelt_assign .)
    LKOLA           reduce using rule 17 (instruction -> arrayelt_assign .)
    MA7ED           reduce using rule 17 (instruction -> arrayelt_assign .)
    DIR             reduce using rule 17 (instruction -> arrayelt_assign .)
    QRA             reduce using rule 17 (instruction -> arrayelt_assign .)
    TOL             reduce using rule 17 (instruction -> arrayelt_assign .)
    [               reduce using rule 17 (instruction -> arrayelt_assign .)
    $end            reduce using rule 17 (instruction -> arrayelt_assign .)
    }               reduce using rule 17 (instruction -> arrayelt_assign .)


state 6

    (18) instruction -> printing .

    KHREJ           reduce using rule 18 (instruction -> printing .)
    KMEL            reduce using rule 18 (instruction -> printing .)
    ID              reduce using rule 18 (instruction -> printing .)
    MOJOD           reduce using rule 18 (instruction -> printing .)
    KTEB            reduce using rule 18 (instruction -> printing .)
    (               reduce using rule 18 (instruction -> printing .)
    MINUS           reduce using rule 18 (instruction -> printing .)
    PLUS            reduce using rule 18 (instruction -> printing .)
    INT             reduce using rule 18 (instruction -> printing .)
    FLOAT           reduce using rule 18 (instruction -> printing .)
    STRING          reduce using rule 18 (instruction -> printing .)
    KHATE2          reduce using rule 18 (instruction -> printing .)
    S7I7            reduce using rule 18 (instruction -> printing .)
    WALO            reduce using rule 18 (instruction -> printing .)
    JEREB           reduce using rule 18 (instruction -> printing .)
    ILA             reduce using rule 18 (instruction -> printing .)
    LKOLA           reduce using rule 18 (instruction -> printing .)
    MA7ED           reduce using rule 18 (instruction -> printing .)
    DIR             reduce using rule 18 (instruction -> printing .)
    QRA             reduce using rule 18 (instruction -> printing .)
    TOL             reduce using rule 18 (instruction -> printing .)
    [               reduce using rule 18 (instruction -> printing .)
    $end            reduce using rule 18 (instruction -> printing .)
    }               reduce using rule 18 (instruction -> printing .)


state 7

    (19) instruction -> incrementation .

    KHREJ           reduce using rule 19 (instruction -> incrementation .)
    KMEL            reduce using rule 19 (instruction -> incrementation .)
    ID              reduce using rule 19 (instruction -> incrementation .)
    MOJOD           reduce using rule 19 (instruction -> incrementation .)
    KTEB            reduce using rule 19 (instruction -> incrementation .)
    (               reduce using rule 19 (instruction -> incrementation .)
    MINUS           reduce using rule 19 (instruction -> incrementation .)
    PLUS            reduce using rule 19 (instruction -> incrementation .)
    INT             reduce using rule 19 (instruction -> incrementation .)
    FLOAT           reduce using rule 19 (instruction -> incrementation .)
    STRING          reduce using rule 19 (instruction -> incrementation .)
    KHATE2          reduce using rule 19 (instruction -> incrementation .)
    S7I7            reduce using rule 19 (instruction -> incrementation .)
    WALO            reduce using rule 19 (instruction -> incrementation .)
    JEREB           reduce using rule 19 (instruction -> incrementation .)
    ILA             reduce using rule 19 (instruction -> incrementation .)
    LKOLA           reduce using rule 19 (instruction -> incrementation .)
    MA7ED           reduce using rule 19 (instruction -> incrementation .)
    DIR             reduce using rule 19 (instruction -> incrementation .)
    QRA             reduce using rule 19 (instruction -> incrementation .)
    TOL             reduce using rule 19 (instruction -> incrementation .)
    [               reduce using rule 19 (instruction -> incrementation .)
    $end            reduce using rule 19 (instruction -> incrementation .)
    }               reduce using rule 19 (instruction -> incrementation .)


state 8

    (20) instruction -> decrementation .

    KHREJ           reduce using rule 20 (instruction -> decrementation .)
    KMEL            reduce using rule 20 (instruction -> decrementation .)
    ID              reduce using rule 20 (instruction -> decrementation .)
    MOJOD           reduce using rule 20 (instruction -> decrementation .)
    KTEB            reduce using rule 20 (instruction -> decrementation .)
    (               reduce using rule 20 (instruction -> decrementation .)
    MINUS           reduce using rule 20 (instruction -> decrementation .)
    PLUS            reduce using rule 20 (instruction -> decrementation .)
    INT             reduce using rule 20 (instruction -> decrementation .)
    FLOAT           reduce using rule 20 (instruction -> decrementation .)
    STRING          reduce using rule 20 (instruction -> decrementation .)
    KHATE2          reduce using rule 20 (instruction -> decrementation .)
    S7I7            reduce using rule 20 (instruction -> decrementation .)
    WALO            reduce using rule 20 (instruction -> decrementation .)
    JEREB           reduce using rule 20 (instruction -> decrementation .)
    ILA             reduce using rule 20 (instruction -> decrementation .)
    LKOLA           reduce using rule 20 (instruction -> decrementation .)
    MA7ED           reduce using rule 20 (instruction -> decrementation .)
    DIR             reduce using rule 20 (instruction -> decrementation .)
    QRA             reduce using rule 20 (instruction -> decrementation .)
    TOL             reduce using rule 20 (instruction -> decrementation .)
    [               reduce using rule 20 (instruction -> decrementation .)
    $end            reduce using rule 20 (instruction -> decrementation .)
    }               reduce using rule 20 (instruction -> decrementation .)


state 9

    (21) instruction -> expression .
    (48) expression -> expression . PLUS expression
    (49) expression -> expression . MINUS expression
    (50) expression -> expression . TIMES expression
    (51) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    KHREJ           reduce using rule 21 (instruction -> expression .)
    KMEL            reduce using rule 21 (instruction -> expression .)
    ID              reduce using rule 21 (instruction -> expression .)
    MOJOD           reduce using rule 21 (instruction -> expression .)
    KTEB            reduce using rule 21 (instruction -> expression .)
    (               reduce using rule 21 (instruction -> expression .)
    INT             reduce using rule 21 (instruction -> expression .)
    FLOAT           reduce using rule 21 (instruction -> expression .)
    STRING          reduce using rule 21 (instruction -> expression .)
    KHATE2          reduce using rule 21 (instruction -> expression .)
    S7I7            reduce using rule 21 (instruction -> expression .)
    WALO            reduce using rule 21 (instruction -> expression .)
    JEREB           reduce using rule 21 (instruction -> expression .)
    ILA             reduce using rule 21 (instruction -> expression .)
    LKOLA           reduce using rule 21 (instruction -> expression .)
    MA7ED           reduce using rule 21 (instruction -> expression .)
    DIR             reduce using rule 21 (instruction -> expression .)
    QRA             reduce using rule 21 (instruction -> expression .)
    TOL             reduce using rule 21 (instruction -> expression .)
    [               reduce using rule 21 (instruction -> expression .)
    $end            reduce using rule 21 (instruction -> expression .)
    }               reduce using rule 21 (instruction -> expression .)
    PLUS            shift and go to state 44
    MINUS           shift and go to state 45
    TIMES           shift and go to state 46
    DIVIDE          shift and go to state 47

  ! MINUS           [ reduce using rule 21 (instruction -> expression .) ]
  ! PLUS            [ reduce using rule 21 (instruction -> expression .) ]


state 10

    (22) instruction -> try .

    KHREJ           reduce using rule 22 (instruction -> try .)
    KMEL            reduce using rule 22 (instruction -> try .)
    ID              reduce using rule 22 (instruction -> try .)
    MOJOD           reduce using rule 22 (instruction -> try .)
    KTEB            reduce using rule 22 (instruction -> try .)
    (               reduce using rule 22 (instruction -> try .)
    MINUS           reduce using rule 22 (instruction -> try .)
    PLUS            reduce using rule 22 (instruction -> try .)
    INT             reduce using rule 22 (instruction -> try .)
    FLOAT           reduce using rule 22 (instruction -> try .)
    STRING          reduce using rule 22 (instruction -> try .)
    KHATE2          reduce using rule 22 (instruction -> try .)
    S7I7            reduce using rule 22 (instruction -> try .)
    WALO            reduce using rule 22 (instruction -> try .)
    JEREB           reduce using rule 22 (instruction -> try .)
    ILA             reduce using rule 22 (instruction -> try .)
    LKOLA           reduce using rule 22 (instruction -> try .)
    MA7ED           reduce using rule 22 (instruction -> try .)
    DIR             reduce using rule 22 (instruction -> try .)
    QRA             reduce using rule 22 (instruction -> try .)
    TOL             reduce using rule 22 (instruction -> try .)
    [               reduce using rule 22 (instruction -> try .)
    $end            reduce using rule 22 (instruction -> try .)
    }               reduce using rule 22 (instruction -> try .)


state 11

    (23) instruction -> if .
